infrastructure/kubernetes/app-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: favourite-recipe
  labels:
    app: nginx
spec:
  replicas: 2
  selector:
    matchLabels:
      app: favourite-recipe
  template:
    metadata:
      labels:
        app: favourite-recipe
    spec:
      containers:
        - name: favourite-recipe
          image: mibrahimid/favourite-recipes:01
          ports:
            - containerPort: 8080
