infrastructure/kubernetes/postgres-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres

spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
        - name: postgres
          image: postgres:14.5
          ports:
            - containerPort: 5432
          volumeMounts:
            - mountPath: "/var/lib/postgresql/data"
              name: "favourite-recipe-pgdata"
      volumes:
        - hostPath:
            path: "/home/docker/pgdata"
          name: favourite-recipe-pgdata
