infrastructure/kubernetes/app-service.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: favourite-recipe
  name: favourite-recipe
  namespace: default
spec:
  ports:
    - port: 80
      protocol: TCP
      targetPort: 8080
  selector:
    app: favourite-recipe
