infrastructure/kubernetes/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: favourite-recipe-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: "favourite-recipes.mibrahim.tech"
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: favourite-recipe
                port:
                  number: 80
    - host: "postgres.mibrahim.tech"
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: postgres-service
                port:
                  number: 5432
